# public/swagger.json
@@ -27,6 +27,22 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"LoginType": {
+				"properties": {
+					"identifier": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"identifier",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Options": {
 				"properties": {
 					"page": {
@@ -122,6 +138,33 @@
 						}
 					}
 				]
+			}
+		},
+		"/api/v1/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/LoginType"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/api/v1/user/{userId}": {
