# src/routes/@types/userRoute.ts
@@ -2,3 +2,8 @@ export interface Options{
     page: number;
     limit: number
 }
+
+export interface LoginType {
+    identifier: string;
+    password: string;
+}
