# src/routes/v1/userPath.ts
@@ -1,2 +1,3 @@
 export const PATH_GET = "/user"
 export const PATH_AUTH = "/auth/signup" 
+export const PATH_LOGIN = "/auth/login" 
